--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanwil Ditjen Pemasyarakatan Kalimantan Selatan</title>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Ditjenpas Kalsel" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         * {
@@ -451,7 +457,7 @@
         </div>
 
         <div class="footer">
-            © 2024 Kanwil Ditjen Pemasyarakatan Kalimantan Selatan
+            © 2025 Kanwil Ditjen Pemasyarakatan Kalimantan Selatan
         </div>
     </div>
 </body>
