--- a/index.html
+++ b/index.html
@@ -83,17 +83,11 @@
             z-index: 1;
         }
 
-        .logo-placeholder {
+        .logo-image {
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, #07213d, #0a3d5c);
+            object-fit: contain;
             border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 36px;
-            font-weight: bold;
         }
 
         .title {
@@ -334,9 +328,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <div class="logo-placeholder">
-                    <i class="fas fa-landmark"></i>
-                </div>
+                <img src="logo.png" alt="Logo Kanwil Ditjen Pemasyarakatan Kalsel" class="logo-image">
             </div>
             <h1 class="title">Kantor Wilayah Direktorat Jenderal Pemasyarakatan</h1>
             <p class="subtitle">Kalimantan Selatan</p>
@@ -457,7 +449,7 @@
         </div>
 
         <div class="footer">
-            © 2025 Kanwil Ditjen Pemasyarakatan Kalimantan Selatan
+            © 2024 Kanwil Ditjen Pemasyarakatan Kalimantan Selatan
         </div>
     </div>
 </body>
